--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+.button {
+  background-color:blue;
+  color:white;
+  border-radius:20px;
+  width:100px;
+  height:30px;
+}
